--- a/app/presenters/templates/Settings/default.latte
+++ b/app/presenters/templates/Settings/default.latte
@@ -149,7 +149,7 @@
 		<a href="{link Subjects:default}"><button class="button tiny">Přidat předmět</button></a>
 
 		{if !count($subjects)}
-			<div class="panel small-12 large-9">Nenaleazeny žádné předměty</div>
+			<div class="panel small-12 large-9">Nenalezeny žádné předměty</div>
 		{else}
 			<table class="small-12 large-9">
 				<thead>
