--- a/www/css/app.css
+++ b/www/css/app.css
@@ -9223,38 +9223,42 @@ textarea {
   color: white;
 }
 /* line 68, ../../scss/app.scss */
+#menu ul.vertical-center li.profile {
+  width: 100%;
+}
+/* line 72, ../../scss/app.scss */
 #menu ul.vertical-center :hover li {
   background: #333333;
 }
-/* line 72, ../../scss/app.scss */
+/* line 76, ../../scss/app.scss */
 #menu ul.vertical-center ul#profile-info {
   padding-top: 5px;
   padding-left: 5px;
 }
-/* line 76, ../../scss/app.scss */
+/* line 81, ../../scss/app.scss */
 #menu ul.vertical-center ul#profile-info li:nth-child(3) {
   font-size: 11px;
   color: grey;
 }
 
-/* line 85, ../../scss/app.scss */
+/* line 90, ../../scss/app.scss */
 #chat-wrapper {
   position: absolute;
   width: 100%;
   z-index: 10;
 }
 
-/* line 91, ../../scss/app.scss */
+/* line 96, ../../scss/app.scss */
 .status {
   color: grey;
 }
 
-/* line 95, ../../scss/app.scss */
+/* line 100, ../../scss/app.scss */
 .online {
   color: green;
 }
 
-/* line 99, ../../scss/app.scss */
+/* line 104, ../../scss/app.scss */
 #chat {
   background-color: #ECECEC;
   height: calc(100vh - 55px);
@@ -9263,12 +9267,12 @@ textarea {
   overflow-y: scroll;
   right: 0;
 }
-/* line 106, ../../scss/app.scss */
+/* line 111, ../../scss/app.scss */
 #chat ul {
   margin-left: 0;
   cursor: pointer;
 }
-/* line 109, ../../scss/app.scss */
+/* line 114, ../../scss/app.scss */
 #chat ul li {
   height: 40px;
   line-height: 40px;
@@ -9276,27 +9280,27 @@ textarea {
   padding: 0 5px;
   border-bottom: 1px solid white;
 }
-/* line 117, ../../scss/app.scss */
+/* line 122, ../../scss/app.scss */
 #chat ul .status {
   font-size: 20px;
 }
-/* line 121, ../../scss/app.scss */
+/* line 126, ../../scss/app.scss */
 #chat ul li:hover {
   background: #dedede;
 }
-/* line 126, ../../scss/app.scss */
+/* line 131, ../../scss/app.scss */
 #chat img {
   margin-right: 2px;
 }
 
-/* line 132, ../../scss/app.scss */
+/* line 137, ../../scss/app.scss */
 .breadcrumbs {
   border-radius: 0;
   border: none;
   border-bottom: 2px solid #ECECEC;
 }
 
-/* line 138, ../../scss/app.scss */
+/* line 143, ../../scss/app.scss */
 .full-width {
   width: 100%;
   margin-left: auto;
@@ -9304,12 +9308,12 @@ textarea {
   max-width: initial;
 }
 
-/* line 145, ../../scss/app.scss */
+/* line 150, ../../scss/app.scss */
 ul.unstyled {
   list-style-type: none;
 }
 
-/* line 149, ../../scss/app.scss */
+/* line 154, ../../scss/app.scss */
 .img-circle {
   -webkit-border-radius: 150px;
   -moz-border-radius: 150px;
@@ -9317,122 +9321,135 @@ ul.unstyled {
   border-radius: 150px;
 }
 
-/* line 154, ../../scss/app.scss */
+/* line 159, ../../scss/app.scss */
 input.form-control-error {
   margin-bottom: 0;
 }
 
-/* line 159, ../../scss/app.scss */
+/* line 164, ../../scss/app.scss */
 .alert-box.success a {
   color: #005938;
 }
 
-/* line 163, ../../scss/app.scss */
+/* line 168, ../../scss/app.scss */
 .alert-box.success a:hover {
   color: #003823;
 }
 
-/* line 168, ../../scss/app.scss */
+/* line 173, ../../scss/app.scss */
 td > .button {
   margin: 0 !important;
 }
 
-/* line 172, ../../scss/app.scss */
+/* line 177, ../../scss/app.scss */
 .alert-box {
   margin-bottom: 0;
 }
 
-/* line 176, ../../scss/app.scss */
+/* line 181, ../../scss/app.scss */
 .hide {
   display: none;
 }
 
-/* line 180, ../../scss/app.scss */
+/* line 185, ../../scss/app.scss */
 .post {
   padding-bottom: 20px;
 }
-/* line 183, ../../scss/app.scss */
+/* line 188, ../../scss/app.scss */
 .post .post-header {
   background-color: #ECECEC;
   text-align: center;
   padding: 10px;
 }
-/* line 189, ../../scss/app.scss */
+/* line 194, ../../scss/app.scss */
 .post .post-header i {
   line-height: 1em;
   font-size: 90px;
 }
-/* line 195, ../../scss/app.scss */
+/* line 200, ../../scss/app.scss */
 .post .post-content {
   padding: 20px;
   background-color: #BFBFBF;
 }
-/* line 199, ../../scss/app.scss */
+/* line 204, ../../scss/app.scss */
 .post .post-content .button {
   margin: 0;
 }
-/* line 204, ../../scss/app.scss */
+/* line 209, ../../scss/app.scss */
 .post .created-date {
   font-size: 12px;
   color: #818181;
 }
 
-/* line 211, ../../scss/app.scss */
+/* line 216, ../../scss/app.scss */
 .posts .post-content {
   padding-bottom: 0;
 }
-/* line 216, ../../scss/app.scss */
+/* line 221, ../../scss/app.scss */
 .posts .bottom a {
   color: white;
 }
-/* line 219, ../../scss/app.scss */
+/* line 224, ../../scss/app.scss */
 .posts .bottom a i {
   font-size: 30px;
 }
 
-/* line 226, ../../scss/app.scss */
+/* line 231, ../../scss/app.scss */
 hr.white {
   border: 1px solid white;
 }
 
 @media only screen {
-  /* line 231, ../../scss/app.scss */
+  /* line 236, ../../scss/app.scss */
   #main-content-wrapper {
     padding-right: 200px;
   }
 
-  /* line 235, ../../scss/app.scss */
+  /* line 240, ../../scss/app.scss */
   .post-header {
     width: 24.5%;
   }
 }
 @media only screen and (max-width: 40em) {
-  /* line 241, ../../scss/app.scss */
+  /* line 246, ../../scss/app.scss */
   #main-content-wrapper {
     padding-right: 0;
   }
 
-  /* line 245, ../../scss/app.scss */
+  /* line 250, ../../scss/app.scss */
   .post-header {
     width: 100%;
   }
 
-  /* line 249, ../../scss/app.scss */
+  /* line 254, ../../scss/app.scss */
   .small-full {
     width: 100%;
   }
 
-  /* line 253, ../../scss/app.scss */
+  /* line 258, ../../scss/app.scss */
   .reveal-modal {
     padding: 1rem;
   }
 
-  /* line 257, ../../scss/app.scss */
+  /* line 262, ../../scss/app.scss */
   .new-activity {
     margin-top: 50px !important;
   }
 }
-/* line 262, ../../scss/app.scss */
+/* line 267, ../../scss/app.scss */
+.activity-wrapper {
+  padding-left: 0.9375rem;
+  padding-right: 0.9375rem;
+}
+
+@media only screen and (min-width: 64.063em) {
+  /* line 273, ../../scss/app.scss */
+  .activity-wrapper {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+/* line 280, ../../scss/app.scss */
 #chat-popups {
   position: fixed;
   bottom: 0;
@@ -9440,13 +9457,13 @@ hr.white {
   padding-right: 200px;
   height: 280px;
 }
-/* line 269, ../../scss/app.scss */
+/* line 287, ../../scss/app.scss */
 #chat-popups .chat-popup {
   width: 250px;
   height: 280px;
   margin-right: 20px;
 }
-/* line 274, ../../scss/app.scss */
+/* line 292, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-header {
   font-size: 12px;
   font-weight: bold;
@@ -9455,13 +9472,13 @@ hr.white {
   padding: 5px 10px;
   color: white;
 }
-/* line 283, ../../scss/app.scss */
+/* line 301, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-header.minimize {
   position: fixed;
   bottom: 0;
   width: 250px;
 }
-/* line 289, ../../scss/app.scss */
+/* line 307, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-text {
   height: 220px;
   background: white;
@@ -9469,17 +9486,17 @@ hr.white {
   border-right: 1px solid lightgray;
   overflow-y: scroll;
 }
-/* line 297, ../../scss/app.scss */
+/* line 315, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation {
   list-style-type: none;
   margin: 0;
   padding: 10px;
 }
-/* line 302, ../../scss/app.scss */
+/* line 320, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation li {
   margin-bottom: 15px;
 }
-/* line 309, ../../scss/app.scss */
+/* line 327, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble {
   position: relative;
   padding: 5px;
@@ -9489,19 +9506,19 @@ hr.white {
   font-size: 12px;
   width: 190px;
 }
-/* line 319, ../../scss/app.scss */
+/* line 337, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble-left {
   background: #e0e0e0;
   margin-left: 5px;
   float: right;
 }
-/* line 326, ../../scss/app.scss */
+/* line 344, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble-right {
   margin-right: 5px;
   float: left;
   background: #DBF4FF;
 }
-/* line 332, ../../scss/app.scss */
+/* line 350, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble:after {
   content: "";
   position: absolute;
@@ -9511,34 +9528,34 @@ hr.white {
   width: 0;
   z-index: 1;
 }
-/* line 342, ../../scss/app.scss */
+/* line 360, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble-left:after {
   left: -7px;
   border-width: 5px 7px 5px 0;
   border-color: transparent #e0e0e0;
 }
-/* line 348, ../../scss/app.scss */
+/* line 366, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble-right:after {
   right: -7px;
   border-width: 5px 0 5px 7px;
   border-color: transparent #DBF4FF;
 }
-/* line 355, ../../scss/app.scss */
+/* line 373, ../../scss/app.scss */
 #chat-popups .chat-popup input {
   height: 30px;
 }
 
-/* line 363, ../../scss/app.scss */
+/* line 381, ../../scss/app.scss */
 .cursor-pointer {
   cursor: pointer;
 }
 
-/* line 367, ../../scss/app.scss */
+/* line 385, ../../scss/app.scss */
 img.no-resize {
   max-width: none;
 }
 
-/* line 371, ../../scss/app.scss */
+/* line 389, ../../scss/app.scss */
 .comment {
   background-color: #d3d3d3;
   margin-bottom: 15px;
@@ -9546,108 +9563,108 @@ img.no-resize {
   padding: 10px;
 }
 
-/* line 379, ../../scss/app.scss */
+/* line 397, ../../scss/app.scss */
 .switch p {
   font-size: 12px;
   margin-bottom: 3px;
 }
 
-/* line 385, ../../scss/app.scss */
+/* line 403, ../../scss/app.scss */
 .strong {
   font-weight: bold;
 }
 
-/* line 389, ../../scss/app.scss */
+/* line 407, ../../scss/app.scss */
 .activities {
   background-color: #ECECEC;
+  margin-bottom: 20px;
 }
-/* line 391, ../../scss/app.scss */
+/* line 410, ../../scss/app.scss */
 .activities p {
   font-size: 13px;
 }
-/* line 395, ../../scss/app.scss */
+/* line 414, ../../scss/app.scss */
 .activities ul li {
   font-size: 13px;
 }
-/* line 400, ../../scss/app.scss */
+/* line 419, ../../scss/app.scss */
 .activities hr {
   margin: 0.5rem 0;
 }
-
-/* line 406, ../../scss/app.scss */
+/* line 423, ../../scss/app.scss */
 .activities h3 {
   font-size: 16px;
   font-weight: bold;
 }
 
-/* line 413, ../../scss/app.scss */
+/* line 431, ../../scss/app.scss */
 #lessonName p {
   margin: 0;
 }
 
-/* line 418, ../../scss/app.scss */
+/* line 436, ../../scss/app.scss */
 #lessonDescription {
   margin-top: 10px;
 }
 
-/* line 422, ../../scss/app.scss */
+/* line 440, ../../scss/app.scss */
 input[type="radio"], input[type="checkbox"] {
   margin-right: 10px;
 }
 
-/* line 426, ../../scss/app.scss */
+/* line 444, ../../scss/app.scss */
 div.success {
   background-color: #dff0d8;
 }
 
-/* line 430, ../../scss/app.scss */
+/* line 448, ../../scss/app.scss */
 i.success {
   color: #6C9902;
 }
 
-/* line 434, ../../scss/app.scss */
+/* line 452, ../../scss/app.scss */
 div.error {
   background-color: #f2dede;
 }
 
-/* line 438, ../../scss/app.scss */
+/* line 456, ../../scss/app.scss */
 i.error {
   color: #f04124;
 }
 
-/* line 442, ../../scss/app.scss */
+/* line 460, ../../scss/app.scss */
 div.row.padding {
   padding: 5px;
 }
 
-/* line 446, ../../scss/app.scss */
+/* line 464, ../../scss/app.scss */
 #chatStatus {
   color: darkgray;
 }
 
-/* line 450, ../../scss/app.scss */
+/* line 468, ../../scss/app.scss */
 a.success {
   color: #43AC6A;
 }
 
-/* line 454, ../../scss/app.scss */
+/* line 472, ../../scss/app.scss */
 a.alert {
   color: #f04124;
 }
 
-/* line 459, ../../scss/app.scss */
+/* line 477, ../../scss/app.scss */
 div.alert a.alert {
   color: white;
   font-weight: bold;
   text-decoration: underline;
 }
 
-/* line 466, ../../scss/app.scss */
+/* line 484, ../../scss/app.scss */
 span.grey {
   color: #a9a9a9;
 }
 
-/* line 470, ../../scss/app.scss */
+/* line 488, ../../scss/app.scss */
 tr.alert {
   background-color: #f2dede;
 }
