--- a/www/css/app.css
+++ b/www/css/app.css
@@ -9366,90 +9366,98 @@ td > .button {
   line-height: 1em;
   font-size: 90px;
 }
-/* line 200, ../../scss/app.scss */
+/* line 199, ../../scss/app.scss */
+.post .post-header a {
+  color: #818181;
+}
+/* line 203, ../../scss/app.scss */
+.post .post-header a:hover {
+  text-decoration: underline;
+}
+/* line 208, ../../scss/app.scss */
 .post .post-content {
   padding: 20px;
   background-color: #BFBFBF;
 }
-/* line 204, ../../scss/app.scss */
+/* line 212, ../../scss/app.scss */
 .post .post-content .button {
   margin: 0;
 }
-/* line 209, ../../scss/app.scss */
+/* line 217, ../../scss/app.scss */
 .post .created-date {
   font-size: 12px;
   color: #818181;
 }
 
-/* line 216, ../../scss/app.scss */
+/* line 224, ../../scss/app.scss */
 .posts .post-content {
   padding-bottom: 0;
 }
-/* line 221, ../../scss/app.scss */
+/* line 229, ../../scss/app.scss */
 .posts .bottom a {
   color: white;
 }
-/* line 224, ../../scss/app.scss */
+/* line 232, ../../scss/app.scss */
 .posts .bottom a i {
   font-size: 30px;
 }
 
-/* line 231, ../../scss/app.scss */
+/* line 239, ../../scss/app.scss */
 hr.white {
   border: 1px solid white;
 }
 
 @media only screen {
-  /* line 236, ../../scss/app.scss */
+  /* line 244, ../../scss/app.scss */
   #main-content-wrapper {
     padding-right: 200px;
   }
 
-  /* line 240, ../../scss/app.scss */
+  /* line 248, ../../scss/app.scss */
   .post-header {
     width: 24.5%;
   }
 }
 @media only screen and (max-width: 40em) {
-  /* line 246, ../../scss/app.scss */
+  /* line 254, ../../scss/app.scss */
   #main-content-wrapper {
     padding-right: 0;
   }
 
-  /* line 250, ../../scss/app.scss */
+  /* line 258, ../../scss/app.scss */
   .post-header {
     width: 100%;
   }
 
-  /* line 254, ../../scss/app.scss */
+  /* line 262, ../../scss/app.scss */
   .small-full {
     width: 100%;
   }
 
-  /* line 258, ../../scss/app.scss */
+  /* line 266, ../../scss/app.scss */
   .reveal-modal {
     padding: 1rem;
   }
 
-  /* line 262, ../../scss/app.scss */
+  /* line 270, ../../scss/app.scss */
   .new-activity {
     margin-top: 50px !important;
   }
 }
-/* line 267, ../../scss/app.scss */
+/* line 275, ../../scss/app.scss */
 .activity-wrapper {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
 }
 
 @media only screen and (min-width: 64.063em) {
-  /* line 273, ../../scss/app.scss */
+  /* line 281, ../../scss/app.scss */
   .activity-wrapper {
     padding-left: 0;
     padding-right: 0;
   }
 }
-/* line 280, ../../scss/app.scss */
+/* line 288, ../../scss/app.scss */
 #chat-popups {
   position: fixed;
   bottom: 0;
@@ -9457,13 +9465,13 @@ hr.white {
   padding-right: 200px;
   height: 280px;
 }
-/* line 287, ../../scss/app.scss */
+/* line 295, ../../scss/app.scss */
 #chat-popups .chat-popup {
   width: 250px;
   height: 280px;
   margin-right: 20px;
 }
-/* line 292, ../../scss/app.scss */
+/* line 300, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-header {
   font-size: 12px;
   font-weight: bold;
@@ -9472,13 +9480,13 @@ hr.white {
   padding: 5px 10px;
   color: white;
 }
-/* line 301, ../../scss/app.scss */
+/* line 309, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-header.minimize {
   position: fixed;
   bottom: 0;
   width: 250px;
 }
-/* line 307, ../../scss/app.scss */
+/* line 315, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-text {
   height: 220px;
   background: white;
@@ -9486,17 +9494,17 @@ hr.white {
   border-right: 1px solid lightgray;
   overflow-y: scroll;
 }
-/* line 315, ../../scss/app.scss */
+/* line 323, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation {
   list-style-type: none;
   margin: 0;
   padding: 10px;
 }
-/* line 320, ../../scss/app.scss */
+/* line 328, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation li {
   margin-bottom: 15px;
 }
-/* line 327, ../../scss/app.scss */
+/* line 335, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble {
   position: relative;
   padding: 5px;
@@ -9506,19 +9514,19 @@ hr.white {
   font-size: 12px;
   width: 190px;
 }
-/* line 337, ../../scss/app.scss */
+/* line 345, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble-left {
   background: #e0e0e0;
   margin-left: 5px;
   float: right;
 }
-/* line 344, ../../scss/app.scss */
+/* line 352, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble-right {
   margin-right: 5px;
   float: left;
   background: #DBF4FF;
 }
-/* line 350, ../../scss/app.scss */
+/* line 358, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble:after {
   content: "";
   position: absolute;
@@ -9528,34 +9536,34 @@ hr.white {
   width: 0;
   z-index: 1;
 }
-/* line 360, ../../scss/app.scss */
+/* line 368, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble-left:after {
   left: -7px;
   border-width: 5px 7px 5px 0;
   border-color: transparent #e0e0e0;
 }
-/* line 366, ../../scss/app.scss */
+/* line 374, ../../scss/app.scss */
 #chat-popups .chat-popup .chat-conversation .bubble-right:after {
   right: -7px;
   border-width: 5px 0 5px 7px;
   border-color: transparent #DBF4FF;
 }
-/* line 373, ../../scss/app.scss */
+/* line 381, ../../scss/app.scss */
 #chat-popups .chat-popup input {
   height: 30px;
 }
 
-/* line 381, ../../scss/app.scss */
+/* line 389, ../../scss/app.scss */
 .cursor-pointer {
   cursor: pointer;
 }
 
-/* line 385, ../../scss/app.scss */
+/* line 393, ../../scss/app.scss */
 img.no-resize {
   max-width: none;
 }
 
-/* line 389, ../../scss/app.scss */
+/* line 397, ../../scss/app.scss */
 .comment {
   background-color: #d3d3d3;
   margin-bottom: 15px;
@@ -9563,108 +9571,108 @@ img.no-resize {
   padding: 10px;
 }
 
-/* line 397, ../../scss/app.scss */
+/* line 405, ../../scss/app.scss */
 .switch p {
   font-size: 12px;
   margin-bottom: 3px;
 }
 
-/* line 403, ../../scss/app.scss */
+/* line 411, ../../scss/app.scss */
 .strong {
   font-weight: bold;
 }
 
-/* line 407, ../../scss/app.scss */
+/* line 415, ../../scss/app.scss */
 .activities {
   background-color: #ECECEC;
   margin-bottom: 20px;
 }
-/* line 410, ../../scss/app.scss */
+/* line 418, ../../scss/app.scss */
 .activities p {
   font-size: 13px;
 }
-/* line 414, ../../scss/app.scss */
+/* line 422, ../../scss/app.scss */
 .activities ul li {
   font-size: 13px;
 }
-/* line 419, ../../scss/app.scss */
+/* line 427, ../../scss/app.scss */
 .activities hr {
   margin: 0.5rem 0;
 }
-/* line 423, ../../scss/app.scss */
+/* line 431, ../../scss/app.scss */
 .activities h3 {
   font-size: 16px;
   font-weight: bold;
 }
 
-/* line 431, ../../scss/app.scss */
+/* line 439, ../../scss/app.scss */
 #lessonName p {
   margin: 0;
 }
 
-/* line 436, ../../scss/app.scss */
+/* line 444, ../../scss/app.scss */
 #lessonDescription {
   margin-top: 10px;
 }
 
-/* line 440, ../../scss/app.scss */
+/* line 448, ../../scss/app.scss */
 input[type="radio"], input[type="checkbox"] {
   margin-right: 10px;
 }
 
-/* line 444, ../../scss/app.scss */
+/* line 452, ../../scss/app.scss */
 div.success {
   background-color: #dff0d8;
 }
 
-/* line 448, ../../scss/app.scss */
+/* line 456, ../../scss/app.scss */
 i.success {
   color: #6C9902;
 }
 
-/* line 452, ../../scss/app.scss */
+/* line 460, ../../scss/app.scss */
 div.error {
   background-color: #f2dede;
 }
 
-/* line 456, ../../scss/app.scss */
+/* line 464, ../../scss/app.scss */
 i.error {
   color: #f04124;
 }
 
-/* line 460, ../../scss/app.scss */
+/* line 468, ../../scss/app.scss */
 div.row.padding {
   padding: 5px;
 }
 
-/* line 464, ../../scss/app.scss */
+/* line 472, ../../scss/app.scss */
 #chatStatus {
   color: darkgray;
 }
 
-/* line 468, ../../scss/app.scss */
+/* line 476, ../../scss/app.scss */
 a.success {
   color: #43AC6A;
 }
 
-/* line 472, ../../scss/app.scss */
+/* line 480, ../../scss/app.scss */
 a.alert {
   color: #f04124;
 }
 
-/* line 477, ../../scss/app.scss */
+/* line 485, ../../scss/app.scss */
 div.alert a.alert {
   color: white;
   font-weight: bold;
   text-decoration: underline;
 }
 
-/* line 484, ../../scss/app.scss */
+/* line 492, ../../scss/app.scss */
 span.grey {
   color: #a9a9a9;
 }
 
-/* line 488, ../../scss/app.scss */
+/* line 496, ../../scss/app.scss */
 tr.alert {
   background-color: #f2dede;
 }
